--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="1324" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/b">best free web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="1324" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -94,7 +94,7 @@
                                 <p>Everything you'd like to know about our new head of school.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="https://mobirise.com">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page51.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 36%;">
