--- a/page30.html
+++ b/page30.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-99" data-rv-view="596">
+  <section id="menu-99" data-rv-view="574">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="600" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.ws/n">best website maker app</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="578" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="603" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="581" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="605" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="583" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="607" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="585" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +127,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="609" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="587" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -138,7 +138,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="611" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="589" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -148,7 +148,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="613" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="591" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -165,7 +165,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="615" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="593" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -175,7 +175,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="617" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="595" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -192,7 +192,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="619" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="597" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -202,7 +202,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="598" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="576" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
