--- a/page21.html
+++ b/page21.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-57" data-rv-view="391">
+  <section id="menu-57" data-rv-view="369">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="395" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="373" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="398" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="376" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="400" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="378" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="402" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="380" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -124,7 +124,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="393" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="371" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
