--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="61" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="61" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -91,7 +91,7 @@
                             <h3 class="mbr-section-title display-2">Unspoken Stresses <br>of the IB</h3>
 
                             <div class="mbr-section-text">
-                                <p>The stresses nobody tells you about.</p>
+                                <p>The stresses nobody tells you about.<br><br>By: Ceola Daly</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page48.html">MORE</a></div>
