--- a/page48.html
+++ b/page48.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html web maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-g5" data-rv-view="1091" style="background-color: rgb(145, 189, 174);">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-g5" data-rv-view="1091" style="background-color: rgb(145, 189, 174);">
 
      
     <div class="mbr-table mbr-table-full">
@@ -95,7 +95,7 @@
                             <h3 class="mbr-section-title display-2">Unspoken Stresses of the IB and How to Handle Them</h3>
 
                             <div class="mbr-section-text lead">
-                                <p>The stress no one talks about, <br>but everyone experiences.</p>
+                                <p>The stress no one talks about, <br>but everyone experiences.<br><br>By: Ceola Daly</p>
                             </div>
                             
 
